Add the ability to submit multiple jobs to fabmo.js and the job manager.

--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -31,7 +31,7 @@
 </nav>
 </div>
 <form style="display:none;" id="fileform">
-	<input type="file" id="file">
+	<input type="file" id="file" multiple>
 </form>
 
 <div class="tabs-content">
@@ -199,7 +199,8 @@
 			drop : function (devt, evt) {
 				evt.preventDefault();
 				try {
-					file = evt.originalEvent.dataTransfer.files[0];
+					file = evt.originalEvent.dataTransfer.files;
+					console.log(file);
 					fabmo.submitJob(file, {}, function(err, data) {
 						if(err){
 							fabmo.notify('error', err);
