--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -25,7 +25,7 @@
       <li class=""><a id="nav-history" href="#tabhistory">History</a></li>
     </ul>
     <ul class="left">
-      <li><a id="nav-submit" class="submit-button" href="#">Submit Job...</a></li>
+      <li><a id="nav-submit" class="submit-button" href="#">Submit Jobs...</a></li>
     </ul>
   </section>
 </nav>
@@ -57,7 +57,7 @@
 					<div class="small-12 columns without-job">
 						<h4 class='no-job'>No Job Pending</h4>
 						<div class="small-11 columns">
-							<h5 class='add-job-please'>To add a Job click "Submit Job"" or drag file here</h5>
+							<h5 class='add-job-please'>To add a Job click "Submit Job" or drag file here</h5>
 						</div>
 					</div>
 				</div>
