Add missing french file and fix sticky top bar in config app

--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -13,7 +13,8 @@
 
 </head>
 <body style="background-color: #ffffff;">
-  <nav class="top-bar" data-topbar role="navigation">
+<div class="sticky">
+<nav class="top-bar" data-topbar role="navigation">
   <ul class="title-area">
     <li class="name">
       <h1><a id="app-header">Configuration</a></h1>
@@ -31,6 +32,7 @@
     </ul>
   </section>
 </nav>
+</div>
 
 <div class="row">
   <form> 
