Cleaning up css

--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -36,10 +36,8 @@
 
 <div class="tabs-content">
   <div class="content active dropzone" id="tabpending">
-  <div class="message">
   	<div id="droptarget">
   	</div>
-  </div>
 	<section class="container topjob hoverdim">
 			<div class="row title jobs-title">
 				<div class="small-12 columns">
@@ -109,11 +107,9 @@
 		</div>
 		</section>
 		<section class="container job-queue hoverdim" style="display:none;">
-			<div class="row title">
 				<div class="small-4 columns">
-					<h4>Pending</h4>
+					<h4 class="pending">Pending</h4>
 				</div>
-			</div> 
 
 			<div class="row jobs-row" style="">
 				<!-- JOB LISTING -->
