slight improvments to job manager

--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -54,7 +54,13 @@
 						</div>
 					</div>
 					<div class="small-12 columns without-job">
-						<h4 class='no-job'>No Job Pending</h4>
+                        <div class="submitWrapper">
+                            <div class="submitActions">
+                                <h5 class='no-job'>Drag files here</h5>
+                                <p>or</p>
+                                <img src="images/click.png">
+                            </div>
+                        </div>
 						<div class="small-11 columns">
 							<h5 class='add-job-please'></h5>
 						</div>
