--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -146,7 +146,8 @@
 		</thead>
 		<tbody><tr></tr></tbody>
 		</table>
-		<a href="#" id="history_page_prev">&lt;&lt; Prev</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#" id="history_page_next">Next &gt;&gt;</a>
+		<div href="#" id="history_page_prev"><p>&lt;&lt; Prev</p></div>
+        <div href="#" id="history_page_next"><p>Next &gt;&gt;</p></div>
   </div>
   <div class="dropDownWrapper"></div>
 </div>
