Make history next/prev controls more like buttons

--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -146,8 +146,8 @@
 		</thead>
 		<tbody><tr></tr></tbody>
 		</table>
-		<div href="#" id="history_page_prev"><p>&lt;&lt; Prev</p></div>
-        <div href="#" id="history_page_next"><p>Next &gt;&gt;</p></div>
+		<div href="#" class="noselect" id="history_page_prev"><p>&lt;&lt; Prev</p></div>
+        <div href="#" class="noselect" id="history_page_next"><p>Next &gt;&gt;</p></div>
   </div>
   <div class="dropDownWrapper"></div>
 </div>
