Add change notification to the machine model, and incorporate into the app app

--- a/dashboard/apps/app_manager.fma/index.html
+++ b/dashboard/apps/app_manager.fma/index.html
@@ -109,7 +109,12 @@
 			});
 		});
 	};
-  
+  	fabmo.on('change', function(topic) {
+  		if(topic === 'apps') {
+  			refreshApps();
+  		}
+  	});
+
 	$(function() {
 		$(document).foundation();
 		refreshApps(); 
