making go here dynamic to enabled axis

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -119,7 +119,7 @@
                            <label  class="noselect">
                             X
                             <span class="units">&nbsp;</span>
-                            <input class="posx pos doselect" id="axis"maxlength="5">
+                            <input class="posx pos doselect axi" maxlength="5">
                           </label>
                         </div>
                         <div class="small-3 columns home"><span class="button-zerox">0</span></div>
@@ -129,7 +129,7 @@
                         <label class="noselect">
                         Y
                         <span class="units">&nbsp;</span>
-                        <input class="posy pos doselect"  id="axis" maxlength="5">
+                        <input class="posy pos doselect axi"  maxlength="5">
                         </label>
                       </div>
                       <div class="small-3 columns home"><span class="button-zeroy">0</span></div>
@@ -139,7 +139,7 @@
                         <label class="noselect">
                         Z
                         <span class="units">&nbsp;</span>
-                        <input class="posz pos doselect" id="axis" maxlength="5">
+                        <input class="posz pos doselect axi" maxlength="5">
                         </label>
                       </div>
                       <div class="small-3 columns home"><span class="button-zeroz">0</span></div>
@@ -149,7 +149,7 @@
                           <label class="noselect">
                             A
                             <span class="units">&nbsp;</span>
-                            <input class="posa pos doselect" id="axis"maxlength="5">
+                            <input class="posa pos doselect axi" maxlength="5">
                           </label>
                         </div>
                         <div class="small-3 columns home"><span class="button-zeroa">0</span></div>
@@ -159,7 +159,7 @@
                           <label class="noselect">
                             B
                             <span class="units">&nbsp;</span>
-                            <input class="posb pos doselect" id="axis"maxlength="5">
+                            <input class="posb pos doselect axi" maxlength="5">
                           </label>
                         </div>
                         <div class="small-3 columns home"><span class="button-zerob">0</span></div>
