--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -38,7 +38,7 @@
 </div>
 
 <div class="row">
-  <form> 
+<!--  <form> -->
 
   <ul class="tabs" data-tab role="tablist">
 
@@ -96,7 +96,7 @@
         <legend>Logging</legend>
         <div class="large-4 columns">
           <div class="row collapse">
-              <label>Function
+              <label>Log Level
                 <select id="engine-log_level" class="engine-input">
                   <option value="g2">G2</option>
                   <option value="debug">Debug</option>
@@ -1642,7 +1642,7 @@
               </label>
           </div> 
           <div class="row collapse">
-            <label>Authorization Timeout</label>
+            <label>Authorization Timeout (Set to 0 to disable)</label>
             <div class="small-9 columns">
               <input type="number" id="machine-auth_timeout" class="machine-input"/>
             </div>
@@ -1655,7 +1655,7 @@
     </div>
   </section>
 </div>
-</form>
+<!--</form>-->
 
 </div>
   <script src="/js/libs/fabmo.js"></script>
