--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -55,19 +55,15 @@
           <!-- Nav-Bar & Buttons for sliding menus -->
           <nav class="tab-bar">
  
-            <!-- ***** Left-Menu Button Section ***** -->
-
-
-            <section class="show-for-medium-up fabmo-status" id="left-position-container">
+            <section class="show-for-small-up fabmo-status" id="left-position-container">
               <div class="svg-container">
-              <!--<div style="display: table-row;" class="small-6 columns">-->
                 <svg id="connection-strength-indicator" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve">
                 <path d="M-612,320v96h96v-96H-612z M-529,403h-70v-70h70V403z"/>
                 <path id="cs4" class="off" d="M233.503,70.369c93.726-6.75,189.622,28.317,256.515,94.363c8.765,9.023,7.622,24.807-1.625,33.076
                   c-8.493,10.012-25.501,10.189-34.266,0.436c-57.224-55.091-138.018-84.881-217.35-78.956
                   c-65.905,4.24-129.749,32.628-177.572,78.096c-4.253,4.347-9.684,7.916-15.938,8.222c-15.666,1.837-30.154-14.536-26.773-29.86
                   c0.954-5.501,4.487-10.083,8.527-13.747C81.009,108.392,156.172,75.469,233.503,70.369z"/>
-                <path id="cs3" d="M231.183,162.282c71.806-7.81,146.369,18.658,197.183,69.968c7.939,9.07,6.95,23.901-1.872,32.052
+                <path id="cs3" class="off" d="M231.183,162.282c71.806-7.81,146.369,18.658,197.183,69.968c7.939,9.07,6.95,23.901-1.872,32.052
                   c-8.046,9.847-24.265,10.953-33.383,2.024c-32.534-32.074-76.518-52.44-122.126-55.774c-55.387-4.594-111.974,16.42-151.411,55.445
                   c-9.094,9.612-26.033,8.518-34.218-1.708c-8.823-8.327-9.553-23.559-1.084-32.381C123.356,192.802,176.209,167.924,231.183,162.282z
                   "/>
@@ -79,7 +75,6 @@
                   c-26.197,0.908-50.475-20.825-52.772-46.88C199.991,368.194,221.382,340.808,248.781,337.651z"/>
                 </svg>
                 </div>
-             <!-- </div> -->
             </section>
 
             <!-- ***** Tool Position Section ***** -->
