Continued upgrades to the DRO.  Fix some issues with ON INPUT and etc.

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -221,7 +221,7 @@
               <label>Pendant</label>
               <div class="keypad-table">
                 <div class="keypad-bar top">
-                  <div class="z_pos keypad-button drive-button bar">Z+</div>
+                  <div class="z_pos keypad-button drive-button bar"><i class="fa fa-lg fa-keypad fa-caret-up"></i></div>
                 </div>
                 <div class="keypad-row">
                   <div class="keypad-cell"></div>
@@ -246,7 +246,7 @@
                 </div>
 
                 <div class="keypad-bar bottom">
-                  <div class="z_neg keypad-button drive-button bar">Z-</div>
+                  <div class="z_neg keypad-button drive-button bar"><i class="fa fa-lg fa-keypad fa-caret-down"></i></div>
                 </div>
               </div>
               <!--
