confirm app delete

--- a/dashboard/apps/app_manager.fma/index.html
+++ b/dashboard/apps/app_manager.fma/index.html
@@ -50,6 +50,12 @@
 					<tbody class="row app-listing"></tbody>
 				</table>
 			</div>
+                <div class="modal-background"></div>
+                <div class="modal-content">
+                    <h5>Are you sure you want to delete app?</h5>
+                    <button class="deleteCancel">Cancel</button>
+                    <button class="deleteOkay">Yes, Delete</button>
+               </div>
 		</div>
 	</div>
 
