--- a/dashboard/apps/app_manager.fma/index.html
+++ b/dashboard/apps/app_manager.fma/index.html
@@ -4,6 +4,7 @@
 	<title>Apps</title>
 
 	<!-- CSS standardisation & inclusion -->
+	<link rel="stylesheet" href="/css/fonts.css">	
 	<link rel="stylesheet" href="/css/foundation.min.css">
 	<link rel="stylesheet" href="/css/normalize.css">
 	<link rel="stylesheet" href="./css/style.css">
