--- a/dashboard/apps/editor.fma/index.html
+++ b/dashboard/apps/editor.fma/index.html
@@ -276,6 +276,8 @@
         if(!source) {
           save();          
         }
+                console.log($('.ace_scroller')[0]);
+        $('.ace_scroller')[0].focus();
       });
 
       function resize() {
