Smooth app loading, fix some synchronicity bugs

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -15,7 +15,7 @@
   <form>
   <input type="file" id="hidden-file-input" style="position: fixed; top:-1000" />
   </form>
-<div id="spinner"></div>
+   <div id="spinner"></div>
    <div class="collapseLeft"></div>
       <div id="main" class="off-canvas-wrap" data-offcanvas>
         <div class="inner-wrap">
@@ -299,6 +299,9 @@
           <section class="main-section" style="display:none;">
             <div id="navbar_container"></div>
             <div id="modal_container" style="display:none;"></div>
+            <div id="waiting_container">
+              <i class="fa fa-5x fa-cog fa-spin"></i>
+            </div>
             <div id="app-client-container">
             <div class='footBar'>
             </div>
